# pypi_search

./: .gitignore  CHANGELOG.md  README.md  build_run_test.sh  flake8_src.sh  pypi-search_Prompts.md  pypi_pkg-example_json.json  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/DyTopo Agent Instructions/: 0-DyTopo-Agent-Orchestration-Basics.md  0-DyTopo_Agent_Prompts_and_Research.md  0-HowTo--DyTopo_Agents_Orchestration.md  0~HowTo--DyTopo_Agents_Orchestration.md  DT-Architect.txt  DT-Dev.txt  DT-Manager.md  DT-Manager.txt  DT-Reviewer.md  DT-Tester.txt
docs/notes/: DyTopo Agent Prompts.md  pypi-search_Prompts.md  pypi_search New Features.md  pypi_search_running-tests.md
src/: pypi_search.py
src/pypi_search_caching/: __init__.py  pypi_search_caching.py
src/test/: test_pypi_search.py
