[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi_search_caching"
version = "0.0.5a1"
description = "Search PyPI package names by regex pattern, with caching and optional details."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "David Sidlo", email = "dsidlo@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docutils>=0.22.4",
    "hatchling",
    "html2text>=2025.4.15",
    "lmdb",
    "msgpack>=1.1.0",
    "pypi>=2.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "tqdm>=4.66.0",
]
[project.scripts]
pypi_search = "pypi_search_caching:main"

[project.urls]
Homepage = "https://github.com/dsidlo/pypi_search/blob/main/README.md"
"Source Code" = "https://github.com/dsidlo/pypi_search"
Repository = "https://github.com/dsidlo/pypi_search"
"Issue Tracker" = "https://github.com/dsidlo/pypi_search/issues"
Changelog = "https://github.com/dsidlo/pypi_search/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
      packages = ["src/pypi_search_caching"]
      excludes = ["src/pypi_search_caching/test/**"]

[tool.uv]
    package = true

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "flake8",
]

[tool.pytest.ini_options]
addopts = '-m "not refresh_cache"'
markers = [
    "refresh_cache: mark a test as requiring cache refresh"
]